<resources>
    <string name="app_name">Money App</string>
    <string name="wallet">Wallet</string>
    <string name="camera">Camera, Take Photo</string>
    <string name="balance">Current Balance</string>
    <string name="T2SWallet">Text to Speech for Wallet</string>
    <string name="T2SCamera">Text to Speech for Wallet</string>
    <string name="TS2Balance">Text to Speech for Balance</string>
    <string name="edit">edit</string>
    <string name="confirm">confirm</string>
    <string name="T2SEdit">T2SEdit</string>
    <string name="add">add</string>
    <string name="placeholderCamera">*Imagine Camera API here*</string>
    <string name="Note5">Five Euro</string>
    <string name="Note10">Ten Euro</string>
    <string name="Note20">Twenty Euro</string>
    <string name="Note50">Fifty Euro</string>
    <string name="Note">Notes Screen</string>
    <string name="Coin">Coins Screen</string>
    <string name="Coin1">One Euro</string>
    <string name="Coin2">Two Euro</string>
    <string name="Coin50">Fifty Cent</string>
    <string name="Coin20">Twenty Cent</string>
    <string name="Coin10">Ten Cent</string>
    <string name="Coin5">Five Cent</string>
    <string name="Change2Coin">Change to Coins</string>
    <string name="Change2Note">Change to Notes</string>
    <string name="ColourBlindSet">Colour-blind Mode</string>
    <string name="ColourBlindSwtch">Off</string>
    <string name="DragDropTxt">Toggle Drag and Drop</string>
    <string name="DragDropSwtch">Off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
