<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flexboxLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity ="center"
    android:background="#fafafa"
    >


    <ImageButton
        android:id="@+id/wallet"
        android:layout_width="wrap_content"
        android:layout_height="166dp"
        android:layout_marginTop="18dp"
        android:background="#fafafa"
        android:contentDescription="@string/wallet"
        android:src="@drawable/wallet3"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoinBtn" />

    <ImageButton
        android:id="@+id/euro50"
        android:layout_width="180dp"
        android:layout_height="118dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/fifty_euro"
        android:contentDescription="@string/Note50"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/euro20"
        android:layout_width="180dp"
        android:layout_height="118dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/twenty_euro"
        android:contentDescription="@string/Note20"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/euro10"
        android:layout_width="180dp"
        android:layout_height="118dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/ten_euro"
        android:contentDescription="@string/Note10"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euro50" />

    <ImageButton
        android:id="@+id/euro5"
        android:layout_width="180dp"
        android:layout_height="118dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/five_euro"
        android:contentDescription="@string/Note5"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euro20" />

    <ImageButton
        android:id="@+id/CoinBtn"
        android:layout_width="99dp"
        android:layout_height="88dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="156dp"
        android:background="#fafafa"
        android:contentDescription="@string/Change2Coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/euro10"
        app:srcCompat="@drawable/coinbtn" />


</androidx.constraintlayout.widget.ConstraintLayout>