<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/Wallet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/wallet"
        android:scaleType="fitCenter"
        android:src="@drawable/moneybutton"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/WalletText"
        app:layout_constraintEnd_toStartOf="@+id/Camera"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Balance"
        app:layout_constraintVertical_bias="0.788" />

    <ImageButton
        android:id="@+id/Camera"
        android:layout_width="151dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/camera"
        android:scaleType="fitCenter"
        android:src="@drawable/camerabutton"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Balance" />

    <TextView
        android:id="@+id/Balance"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="444dp"
        android:contentDescription="Balance"
        android:text="TextView"
        android:textColor="#828282"
        android:textSize="60sp"
        android:visibility="visible"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="€ XX.XX" />

    <ImageView
        android:id="@+id/BalanceT2S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/TS2Balance"
        android:src="@drawable/text2speech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Balance"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/text2speech" />

    <ImageView
        android:id="@+id/WalletT2S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/T2SWallet"
        android:src="@drawable/text2speech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/text2speech" />

    <ImageView
        android:id="@+id/CameraT2S"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:background="#FFFFFF"
        android:contentDescription="Text to Speech for Camera"
        android:src="@drawable/text2speech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraText"
        app:srcCompat="@drawable/text2speech" />

    <TextView
        android:id="@+id/WalletText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="Wallet"
        android:textColor="#cc0000"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/WalletT2S"
        app:layout_constraintEnd_toStartOf="@+id/cameraText"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cameraText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:text="Camera"
        android:textColor="#cc0000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Camera" />

    <TextView
        android:id="@+id/cbalanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Balance:"
        android:textColor="#cc0000"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/Balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

</androidx.constraintlayout.widget.ConstraintLayout>